# tarkov

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: main.yml
examples/: auth.rs  auth_2fa.rs  auth_basic.rs  auth_captcha.rs  basic_auth.rs  ragfair_buy_item.rs  ragfair_sell_item.rs  search_trader_items.rs  search_traders.rs  test_all_getters.rs  trader_barter_deal.rs  trader_cash_deal.rs  trader_sell_item.rs
src/: auth.rs  bad_json.rs  constant.rs  friend.rs  global.rs  hwid.rs  inventory.rs  lib.rs  market_filter.rs  profile.rs  ragfair.rs  trading.rs
tests/: test_api.rs
