[package]
name = "tarkov"
version = "0.1.0-alpha.1"
authors = ["Dan Kyung <dan@kyung.ca>"]
edition = "2018"
readme = "README.md"
license = "MIT"
keywords = ["escapefromtarkov", "eft", "tarkov", "sdk", "api"]
include = ["src/**/*", "Cargo.toml", "LICENSE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "2.0", features = ["openssl"] }
md5 = "0.7"
err-derive = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-rt = "1.0"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
rand = "0.7"
log = "0.4"
serde_repr = "0.1"

[dev-dependencies]
env_logger = "0.7"
